xorg-server (2:1.7.5.902-1) UNRELEASED; urgency=low

  [ Julien Cristau ]
  * config/udev: fix adding unnamed devices.

  [ Timo Aaltonen ]
  * Add 16-config-dont-filter-input-subsys.diff so for instance serial
    wacom devices are initialized by the udev backend (LP: #522318,
    closes: #568236).

  [ Brice Goglin ]
  * New upstream release.
    + Allow for missing or disabled compat_output, closes: #572268, #554450.
    + Reenable RECORD extension, closes: #570680.
    + dix: try to ring the bell even if the current device doesn't have one,
      closes: #564200.
  * Refresh patches.
  * Fix typo in xvfb-run.1, thanks Joey Hess, closes: #527490.

  [ Cyril Brulebois ]
  * Add udeb needed for the graphical installer: xserver-xorg-core-udeb.
  * Version/Bump some B-D to make sure xserver-xorg-core-udeb gets its
    dependencies on the (recently-added) udebs rather than on the
    libraries:
     - libgcrypt11-dev (switching from the virtual libgcrypt-dev package)
     - libpciaccess-dev
     - libudev-dev
     - libxau-dev
     - libxfont-dev

 -- Drew Parsons <dparsons@debian.org>  Wed, 03 Mar 2010 23:33:54 +1100

xorg-server (2:1.7.5-1) unstable; urgency=low

  [ Julien Cristau ]
  * Remove myself from Uploaders

  [ Brice Goglin ]
  * New upstream release.
    + Restore lastDeviceEventTime update in dixSaveScreens,
      closes: #563816.
    + Don't double-swap the RandR PropertyNotify event,
      closes: #569036.
    + Xi: reset the sli pointers after copying device classes,
      closes: #566147.
  * Bump Standards-Version to 3.8.4.

 -- Brice Goglin <bgoglin@debian.org>  Tue, 16 Feb 2010 08:00:27 +0100

xorg-server (2:1.7.4-2) unstable; urgency=low

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!

  [ Brice Goglin ]
  * Add 05_only_call_gamma_set_if_nonnull.diff to unbreak the nv driver,
    closes: #564203.
