@@ -1,7 +1,7 @@
-usr/bin/dmx*
-usr/bin/vdltodmx
-usr/bin/xdmx
-usr/bin/xdmxconfig
-usr/share/man/man1/vdltodmx.1
-usr/share/man/man1/dmxtodmx.1
-usr/share/man/man1/xdmxconfig.1
+main/usr/bin/dmx*	usr/bin
+main/usr/bin/vdltodmx	usr/bin
+main/usr/bin/xdmx	usr/bin
+main/usr/bin/xdmxconfig	usr/bin
+main/usr/share/man/man1/vdltodmx.1	usr/share/man/man1
+main/usr/share/man/man1/dmxtodmx.1	usr/share/man/man1
+main/usr/share/man/man1/xdmxconfig.1	usr/share/man/man1
