@@ -1,2 +1,2 @@
-usr/bin/Xdmx
-usr/share/man/man1/Xdmx.1
+main/usr/bin/Xdmx	usr/bin
+main/usr/share/man/man1/Xdmx.1	usr/share/man/man1
