@@ -1,2 +1,2 @@
-usr/bin/Xnest
-usr/share/man/man1/Xnest.1
+main/usr/bin/Xnest	usr/bin
+main/usr/share/man/man1/Xnest.1	usr/share/man/man1
