@@ -1,2 +1,2 @@
-usr/bin/Xephyr
-usr/share/man/man1/Xephyr.1
+main/usr/bin/Xephyr	usr/bin
+main/usr/share/man/man1/Xephyr.1	usr/share/man/man1
