@@ -1,1 +1,1 @@
-usr/bin/Xfbdev
+main/usr/bin/Xfbdev	usr/bin
