@@ -1,10 +1,10 @@
-usr/lib/xorg/modules/
-usr/bin/Xorg
-usr/share/man/man1/Xorg.1
-usr/share/man/man4/exa.4
-usr/share/man/man4/fbdevhw.4
-usr/share/man/man5/xorg.conf.5
-usr/bin/cvt
-usr/bin/gtf
-usr/share/man/man1/cvt.1
-usr/share/man/man1/gtf.1
+main/usr/lib/xorg/modules	usr/lib/xorg
+main/usr/bin/Xorg	usr/bin
+main/usr/share/man/man1/Xorg.1	usr/share/man/man1
+main/usr/share/man/man4/exa.4	usr/share/man/man4
+main/usr/share/man/man4/fbdevhw.4	usr/share/man/man4
+main/usr/share/man/man5/xorg.conf.5	usr/share/man/man5
+main/usr/bin/cvt	usr/bin
+main/usr/bin/gtf	usr/bin
+main/usr/share/man/man1/cvt.1	usr/share/man/man1
+main/usr/share/man/man1/gtf.1	usr/share/man/man1
