@@ -1,3 +1,3 @@
-usr/include/xorg/*
-usr/lib/pkgconfig/xorg-server.pc
-usr/share/aclocal/*
+main/usr/include/xorg	usr/include
+main/usr/lib/pkgconfig/xorg-server.pc	usr/lib/pkgconfig
+main/usr/share/aclocal	usr/share
